tests/asm-link/string-literal-macro-arg/rgbasm.err
error: invalid character escape
   ╭─[ test.asm:6:2 ]
   │
 6 │  \wor\
   │  ─┬  
   │   ╰── cannot escape this character
───╯
error: invalid character escape
    ╭─[ test.asm:11:6 ]
    │
 11 │ mac "\
    │      ┬  
    │      ╰── no character to escape
────╯
error: unterminated string literal
    ╭─[ test.asm:11:5 ]
    │
 11 │ mac "\
    │     ─┬  
    │      ╰── no closing quote before the end of the line
────╯
3 errors generated.
